<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    tools:context=".MainscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
 <!--   <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mainscreen_orange" />-->

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="30dp"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/mainscreen_header"
        android:textColor="#ffffff"
        android:textSize="30sp"
        />
-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/txt_header"
        android:layout_marginTop="60dp"/>
    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnInternet"
                android:layout_marginBottom="20dp"
                />
            <!--        <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="a"/>-->
            <Button
                android:id="@+id/btnWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLocal" />

        </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">
        </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">


            <TextView
                android:id="@+id/mainscreen_version"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:background="#7d000000"
                android:text="@string/mainscreen_content"
                android:textColor="#c7c7c7"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/mainscreen_manufacturer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:background="#7d000000"
                android:text="@string/mainscreen_manufacturer"
                android:textColor="#c7c7c7"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <!--    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="?metaButtonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/dummy_button"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy_button" />

            </LinearLayout>
        </FrameLayout>-->

</FrameLayout>
